--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ html,
 body {
   height: 100%;
   font-family: Inter;
+  width: 90rem;
 }
 
 .root {
@@ -21,6 +22,8 @@ body {
   align-items: center;
   height: 100%;
   main {
-    height: 100%;
+    background-color: white;
+    width: 83rem;
+    // height: 100%;
   }
 }
