--- a/src/Header/header.module.scss
+++ b/src/Header/header.module.scss
@@ -1,7 +1,7 @@
 @import "../vars.scss";
 
 header {
-  width: 90rem;
+  min-width: 90rem;
   height: 5.8125rem;
   display: grid;
   grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
