--- a/src/Main/components/carousel/carousel.module.scss
+++ b/src/Main/components/carousel/carousel.module.scss
@@ -20,6 +20,7 @@
       width: 2.5rem;
       height: 2.5rem;
       margin-right: -1rem;
+      cursor: pointer;
     }
     .card {
       width: 25rem;
@@ -47,7 +48,7 @@
       width: 2.5rem;
       height: 2.5rem;
       margin-left: -1rem;
-
+      cursor: pointer;
       img {
         rotate: 180deg;
       }
