--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -31,6 +31,10 @@
       flex-shrink: 0;
       border-radius: 0.3125rem;
       background: $additional-color-3;
+      cursor: pointer;
+      &:hover {
+        background-color: #a7b1f5;
+      }
     }
   }
   .back_img {
