--- a/src/Main/components/tariffs/tariffs.module.scss
+++ b/src/Main/components/tariffs/tariffs.module.scss
@@ -1,13 +1,19 @@
 @import "../../../vars.scss";
 
 .beginner {
-  background: $additional-color-2;
+  background-color: $additional-color-2;
 }
 .pro {
-  background: $additional-color-1;
+  background-color: $additional-color-1;
 }
 .business {
-  background: $main-color-2;
+  background-color: $main-color-2;
+
+  color: $main-color-3;
+}
+
+.current {
+  background-color: gray;
   color: $main-color-3;
 }
 
@@ -34,9 +40,7 @@
     h2 {
       font-family: Inter;
       font-size: 1.875rem;
-      font-style: normal;
       font-weight: 500;
-      line-height: normal;
       letter-spacing: 0.01875rem;
     }
     p {
@@ -50,25 +54,30 @@
     .card {
       display: flex;
       flex-direction: column;
-      width: 25.9375rem;
+      align-items: center;
+      width: 26rem;
       height: 33.75rem;
       border-radius: 0.625rem;
       background: $main-color-3;
       box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
       .heading {
-        padding-top: 1.88rem;
-        padding-left: 1.88rem;
+        width: 100%;
         height: 8.25rem;
         border-radius: 0.625rem 0.625rem 0rem 0rem;
-      }
-      img {
-        width: 5.76525rem;
-        height: 5.19656rem;
-        padding-left: 17.4rem;
-        margin-top: -3rem;
-      }
-      p {
-        margin-top: -1.4rem;
+        h2 {
+          padding-top: 1.88rem;
+          padding-left: 1.87rem;
+        }
+        img {
+          width: 5.76525rem;
+          height: 5.19656rem;
+          padding-left: 19.4rem;
+          margin-top: -3rem;
+        }
+        p {
+          margin-top: -1.4rem;
+          padding-left: 1.87rem;
+        }
       }
     }
     .is_current {
@@ -87,6 +96,9 @@
         font-size: 0.875rem;
         padding-top: 0.175rem;
       }
+      & {
+        background-color: #3ba5e0;
+      }
     }
     .is_current_hide {
       width: 8.375rem;
@@ -96,7 +108,6 @@
     }
     .price {
       height: 5rem;
-      padding-left: 1.88rem;
       span {
         font-size: 1.5625rem;
         opacity: 0.5;
@@ -104,8 +115,8 @@
       }
     }
     .terms {
-      padding-top: 3.7rem;
-      padding-left: 1.88rem;
+      padding-top: 3rem;
+      margin-left: -5.5rem;
       li {
         padding-top: 0.63rem;
         list-style-type: none;
@@ -120,6 +131,22 @@
           width: 1.25rem;
           height: 1.25rem;
         }
+      }
+    }
+    button {
+      width: 22.1875rem;
+      height: 3.6875rem;
+      margin-top: 3rem;
+      cursor: pointer;
+      background-color: $additional-color-3;
+      color: #fff;
+      font-family: Inter;
+      font-size: 1.25rem;
+      font-weight: 400;
+      letter-spacing: 0.0125rem;
+      border-radius: 0.3125rem;
+      &:hover {
+        background-color: #a7b1f5;
       }
     }
   }
