--- a/src/Header/header.module.scss
+++ b/src/Header/header.module.scss
@@ -60,7 +60,7 @@ header {
       padding: 0 1rem;
     }
 
-    button {
+    .link_button {
       font-weight: 500;
       width: 4.0625rem;
       height: 1.625rem;
