--- a/src/index.scss
+++ b/src/index.scss
@@ -21,9 +21,24 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100%;
-  main {
+  .main {
     background-color: white;
     width: 83rem;
     // height: 100%;
+  }
+  .error-page {
+    height: 100%;
+    width: 83rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    h1 {
+      font-family: ferry;
+      font-size: 2rem;
+    }
+    p {
+      margin: 2rem;
+    }
   }
 }
