добавил запрос на сервер account/info, дописываю шапку с информацией о пользователе

--- a/src/Header/header.module.scss
+++ b/src/Header/header.module.scss
@@ -46,6 +46,7 @@ header {
   }
   .account_info {
     grid-area: account-info;
+    display: flex;
   }
   .account {
     grid-area: 1 / 4 / 1 /6;
