--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
+@import "./vars.scss";
 * {
   margin: 0;
   padding: 0;
@@ -21,11 +22,12 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100%;
-  .main {
-    background-color: white;
+  main {
+    background-color: $main-color-3;
     width: 83rem;
-    // height: 100%;
+    flex-grow: 1;
   }
+
   .error-page {
     height: 100%;
     width: 83rem;
