--- a/src/Main/components/search/search.module.scss
+++ b/src/Main/components/search/search.module.scss
@@ -1,4 +1,6 @@
+@import "../../../vars.scss";
 .wrapper {
+  margin-top: 4.3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,18 +11,14 @@
     width: 83rem;
     .heading__content {
       width: 817px;
-      h1 {
-        font-family: Ferry;
-        font-size: 40px;
-        font-weight: 900;
-      }
-      .heading__comment {
-        padding-top: 25px;
-        width: 534px;
-        font-size: 20px;
-      }
-      .heading__img {
+    }
+    .heading__img {
+      flex-grow: 1;
+      margin-top: 3rem;
+      margin-right: 4rem;
+      .wrapper_img {
         display: flex;
+        justify-content: space-between;
       }
     }
   }
@@ -28,50 +26,131 @@
     margin-top: 47px;
     width: 83rem;
     display: flex;
-    .search_form {
-      font-size: 18px;
-      width: 872px;
-      height: 543px;
-      display: flex;
-      border-radius: 10px;
-      background: #fff;
-      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-      .search_form__input {
-        display: flex;
-        flex-direction: column;
-        input {
-          width: 242px;
-          height: 43px;
-          border-radius: 5px;
-          border: 1px solid #c7c7c7;
-          background: #fff;
-          box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.05);
-        }
-      }
-      .search_form__checkbox {
-        list-style-type: none;
-        margin-left: 55px;
-        display: flex;
-        flex-direction: column;
-        label {
-          padding-left: 1rem;
-        }
-        li {
-          padding-bottom: 15px;
-        }
-      }
-    }
     .search_form__img {
+      margin-left: 5rem;
+      margin-top: 4.13rem;
       width: 443px;
       height: 471px;
     }
   }
 }
-.RANGE {
-  width: 372px;
-  height: 94px;
-  #RANGE_from,
-  #RANGE_to {
-    width: 176px;
+.heading__content {
+  h1 {
+    font-family: Ferry;
+    font-size: 40px;
+    font-weight: 900;
+  }
+  .heading__comment {
+    padding-top: 25px;
+    width: 534px;
+    font-size: 20px;
+  }
+}
+
+.search_form {
+  font-size: 18px;
+  width: 54.5rem;
+  height: 33.9375rem;
+  display: flex;
+  border-radius: 10px;
+  background: $main-color-3;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+  margin-bottom: 4rem;
+  .search_form__input {
+    margin-top: 18px;
+    margin-left: 40px;
+    display: flex;
+    flex-direction: column;
+    p {
+      padding-top: 2px;
+      font-size: 0.875rem;
+    }
+    label {
+      margin-top: 11px;
+    }
+    input,
+    select {
+      margin-top: 20px;
+      width: 15.125rem;
+      height: 43px;
+      border-radius: 5px;
+      font-size: 0.875rem;
+      text-align: center;
+    }
+    select {
+      appearance: none;
+      background-image: url("/src/assets/Arrow.svg");
+      background-repeat: no-repeat;
+      background-color: $main-color-3;
+      background-position: calc(100% - 15px) center;
+      border: 1px solid #c7c7c7;
+      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.05);
+    }
+    .range {
+      input {
+        width: 11rem;
+        margin-right: 1rem;
+      }
+    }
+
+    .valid {
+      color: $main-color-2;
+      p {
+        visibility: hidden;
+      }
+      input,
+      select {
+        border: 1px solid #c7c7c7;
+        background: $main-color-3;
+        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.05);
+      }
+    }
+    .error {
+      font-size: 18px;
+      color: red;
+
+      span {
+        color: black;
+      }
+      sup {
+        color: red;
+      }
+      input {
+        border: 1px solid #ff5959;
+        box-shadow: 0px 0px 20px 0px rgba(255, 89, 89, 0.2);
+      }
+    }
+  }
+  .search_form__checkbox {
+    list-style-type: none;
+    margin-top: 37px;
+    margin-left: -1.5rem;
+    display: flex;
+    flex-direction: column;
+    label {
+      padding-left: 0.75rem;
+      color: $main-color-2;
+    }
+    li {
+      padding-bottom: 15px;
+    }
+    button {
+      width: 19.0625rem;
+      height: 3.6875rem;
+      border-radius: 0.3125rem;
+      background: $additional-color-3;
+      margin-top: 9rem;
+      margin-left: 4rem;
+      color: $main-color-3;
+      font-size: 1.375rem;
+      &:disabled {
+        opacity: 0.4;
+      }
+    }
+    p {
+      margin-top: 0.5rem;
+      margin-left: 4rem;
+      font-size: 0.875rem;
+    }
   }
 }
