--- a/src/Main/components/search/search.module.scss
+++ b/src/Main/components/search/search.module.scss
@@ -92,6 +92,16 @@
         margin-right: 1rem;
       }
     }
+    #range_from {
+      border: 1px solid #c7c7c7;
+      background: $main-color-3;
+      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.05);
+    }
+    #range_to {
+      border: 1px solid #c7c7c7;
+      background: $main-color-3;
+      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.05);
+    }
 
     .valid {
       color: $main-color-2;
