--- a/src/Header/header.module.scss
+++ b/src/Header/header.module.scss
@@ -12,6 +12,9 @@ header {
   color: $main-color-2;
   font-size: 0.875rem;
   font-weight: 400;
+  // position: sticky;
+  // top: 0;
+  // z-index: 1;
 
   %link {
     a {
@@ -107,8 +110,10 @@ header {
       font-weight: 500;
       // width: 4.0625rem;
       // height: 1.625rem;
+      color: black;
       padding: 0.5rem 1rem;
       border-radius: 0.3125rem;
+      text-decoration: none;
       background: $additional-color-1;
       cursor: pointer;
       &:hover {
