--- a/src/Header/header.module.scss
+++ b/src/Header/header.module.scss
@@ -1,7 +1,7 @@
 @import "../vars.scss";
 
 header {
-  min-width: 90rem;
+  width: 90rem;
   height: 5.8125rem;
   display: grid;
   grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
@@ -31,7 +31,10 @@ header {
     height: 93px;
     width: 8.125rem;
     margin-left: 3.75rem;
-    background: url("../assets/logo.svg"), lightgray 50% / cover no-repeat;
+    background-image: url("../assets/logo.svg");
+  }
+  .nav_button {
+    display: none;
   }
   .navbar {
     grid-area: navbar;
@@ -143,6 +146,48 @@ header {
       width: 2rem;
       height: 2rem;
       border-radius: 50%;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  header {
+    margin: -16px 0;
+    width: 100vw;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "logo account-info account";
+    place-items: center;
+    gap: 5vw;
+
+    .popup {
+      position: fixed;
+      z-index: 2;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: $main-color-1;
+    }
+
+    .navbar {
+      display: none;
+    }
+    .logo {
+      width: 6.9375rem;
+      height: 6.9375rem;
+      grid-area: logo;
+      background-size: 101%;
+      background-repeat: no-repeat;
+      background-position: center center;
+      margin-left: 1rem;
+    }
+    .nav_button {
+      display: block;
+      grid-area: account;
+      cursor: pointer;
+    }
+    .account {
+      display: none;
     }
   }
 }
