--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -55,3 +55,41 @@
   margin-top: 4rem;
   height: 40rem;
 }
+
+@media (max-width: 600px) {
+  .top_container {
+    flex-direction: column;
+    align-items: center;
+    margin: 1.25rem 0;
+    // width: 96vw;
+    .heading {
+      width: 96vw;
+      h1 {
+        width: 96vw;
+        font-size: 1.75rem;
+      }
+      p {
+        width: 96vw;
+      }
+      button {
+        margin-top: 0;
+        margin: 2rem 0;
+      }
+    }
+    .back_img {
+      width: 100vw;
+      margin: 0;
+      img {
+        width: 100vw;
+      }
+    }
+  }
+  .middle_img {
+    margin: 1rem 0;
+    width: 100vw;
+    height: auto;
+    img {
+      width: 100vw;
+    }
+  }
+}
