--- a/src/Main/components/carousel/carousel.module.scss
+++ b/src/Main/components/carousel/carousel.module.scss
@@ -56,3 +56,14 @@
     }
   }
 }
+@media (max-width: 600px) {
+  .carousel {
+    margin: 2rem 0;
+    height: auto;
+    h2 {
+      font-size: 1.75rem;
+      margin: 1rem;
+      width: 17rem;
+    }
+  }
+}
