--- a/src/Main/components/carousel/carousel.module.scss
+++ b/src/Main/components/carousel/carousel.module.scss
@@ -1,10 +1,10 @@
 @import "../../../vars.scss";
 .carousel {
   width: 100%;
-  height: 21.8125rem;
+  height: 25rem;
   h2 {
     color: $main-color-2;
-    font-family: Ferry;
+    font-family: Ferry, sans-serif;
     font-size: 2.8125rem;
     font-style: normal;
     font-weight: 900;
@@ -36,7 +36,7 @@
       p {
         margin-top: 0.75rem;
         margin-left: 1.2rem;
-        width: 19.5625rem;
+        width: 19rem;
         font-size: 1.125rem;
         font-style: normal;
         font-weight: 400;
