--- a/src/index.scss
+++ b/src/index.scss
@@ -13,8 +13,8 @@
 html,
 body {
   height: 100%;
-  font-family: Inter;
-  width: 90rem;
+  font-family: Inter, sans-serif;
+
 }
 
 .root {
@@ -24,19 +24,20 @@ body {
   height: 100%;
   main {
     background-color: $main-color-3;
-    width: 83rem;
+    width: 92vw;
     flex-grow: 1;
+
+
   }
 
   .error-page {
     height: 100%;
-    width: 83rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     h1 {
-      font-family: ferry;
+      font-family: ferry, sans-serif;
       font-size: 2rem;
     }
     p {
@@ -44,18 +45,18 @@ body {
     }
   }
 }
+
 @media (max-width: 600px) {
-  html,
-  body {
-    width: 100vw;
-  }
   .root {
-    width: 100vw;
     main {
-      width: 100vw;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
+  }
+}
+@media (max-width: 900px){
+  h1{
+    font-size: 1rem;
   }
 }
