--- a/src/Main/components/carousel/carousel.module.scss
+++ b/src/Main/components/carousel/carousel.module.scss
@@ -28,7 +28,7 @@
 
       border-radius: 0.625rem;
       background: #fff;
-      box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
       img {
         margin-top: 1.35rem;
         margin-left: 1.25rem;
@@ -56,14 +56,16 @@
     }
   }
 }
-@media (max-width: 600px) {
+@media (max-width: 1000px) {
   .carousel {
     margin: 2rem 0;
     height: auto;
     h2 {
+      width: 100%;
       font-size: 1.75rem;
-      margin: 1rem;
-      width: 17rem;
+      text-align: center;
+      margin-bottom:  1.5rem;
+      //width: 17rem;
     }
   }
 }
